# BLV_Synth_Data_Recorder

./: CLAUDE.md  pyproject.toml
blv/: __init__.py
blv/synth/: __init__.py
blv/synth/data_collector/: __init__.py  asset_browser.py  data_recorder.py  extension.py  gamepad_camera.py  location.py  trajectory.py  ui.py
blv/synth/data_collector/backend/: __init__.py  asset_browser.py  capture.py  config.py  events.py  gamepad_camera.py  location.py  paths.py  session.py  stage.py  trajectory.py  trajectory_io.py
blv/synth/data_collector/cli/: __init__.py  __main__.py  bootstrap.py
blv/synth/data_collector/cli/commands/: __init__.py  collect_all_cmd.py  list_cmd.py  record_all_cmd.py  run_cmd.py
blv/synth/data_collector/tests/unit/: conftest.py  test_cli_parser.py  test_config.py  test_events.py  test_gamepad_slow_mode.py  test_location.py  test_paths.py  test_trajectory_io.py
blv/synth/data_collector/ui/: __init__.py  style.py  window.py
blv/synth/data_collector/ui/sections/: __init__.py  asset_browser.py  camera.py  capture.py  collect_all.py  project.py  record_with_trajectory.py  trajectory_play.py  trajectory_record.py
blv_synth_data_collector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
config/: config.yaml  config_to_record.yaml  extension.toml
docs/: BUG_BASH.md  README.md
tests/: test_asset_swap.py
